/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package cotizacionesycomprasaplication.base;

/**
 *
 * @author REY
 */
public class Proveedor {
    private String nit;
    private String nombreProveedor;

    public Proveedor() {
    }

    public Proveedor(String nit, String nombreProveedor) {
        this.nit = nit;
        this.nombreProveedor = nombreProveedor;
    }
    
}
